# PokeBot

./: README.md  discloud.config  main.py  pyproject.toml  requirements.txt  secrets.json
.github/workflows/: test.yml
comandos/: BatalhaPokemon.py  CacaPokemon.py  Conquistas.py  Pokedex.py
controllers/: controllerConquista.py  controllerPokemon.py
controllers/constantes/: constantes.py
data/: moves.json  moves_bkp.json  pokemons.json  pokemons_.json
entidades/: conquista.py  pokemon.py  usuarioDiscord.py
scrapy/: controllerScrapy.py
src/: database.py  emmiter.py  main.py
src/cogs/battle/: battle.com.py  battle.py  battle_choice_embed.py  battle_embed.py
src/cogs/pokedex/: pokedex_cog.py  pokedex_embed.py
src/cogs/trivia/: trivia.py  wtp_cog.py  wtp_embed.py  wtp_result_embed.py  wtp_successful_embed.py
src/models/: custom_model_base.py  move.py  pokemon.py
src/utils/: create_black_silhouette.py  emoji_type.py  status_bar.py
tests/: test_database.py
